tests/NormalTests/paczka1/fuzzy1/11019147.err
Error in line 11: mlO S990 15,8
Error in line 18: 7KcCTEwHE S924 40,2
Error in line 21: EKINa1WouU S924 22,3
Error in line 26: EKINa1WouU A900 18,6
Error in line 33: 7KcCTEwHE A900 81,7
